# rfid_sfl

./: .gitignore  Cargo.toml  README.MD
src/: config.rs  devices.rs  main.rs  rfid_items.rs  routes.rs
src/devices/: bibliotheca.rs  cf_rh320u_93.rs  test_device.rs
src/routes/: get_devices_list.rs  get_items_list.rs  index.rs  rfid_index.rs  write_tags.rs
