[package]
name = "rfid_sfl"
description = "RFID Server For Libraries"
authors = ["Michael Wright <maiklpolkovnikov@gmail.com>"]
repository = "https://github.com/michaelwright235/rfid_sfl/"
categories = ["network-programming"]
keywords = ["web", "http", "usb"]
license = "GPL-3.0-or-later"
version = "1.0.1"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["http2", "json"]}
cf_rh320u_93_reader = "0.3.1"
rocket-client-addr = "0.5.2"
log = "0.4.17"
simplelog = "0.12.0"
native-dialog = {git = "https://github.com/michaelwright235/native-dialog-rs", branch = "user_notification"}

[profile.release]
strip = true
