[package]
name = "rfid_sfl"
description = "RFID Server For Libraries"
authors = ["Michael Wright <maiklpolkovnikov@gmail.com>"]
repository = "https://github.com/michaelwright235/rfid_sfl/"
categories = ["network-programming"]
keywords = ["web", "http", "usb"]
license = "GPL-3.0-or-later"
version = "1.0.1"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.4", features = ["http2", "json"]}
cf_rh320u_93_reader = "0.3.1"
rocket-client-addr = "0.5.4"
log = "0.4.20"
simplelog = "0.12.1"
native-dialog = "0.7.0"

[profile.release]
strip = true
